...
                    <constraints>
                        <constraint firstAttribute="height" constant="44" id="ohh-xp-jYb"/>
                    </constraints>
                    <fontDescription key="fontDescription" name="MoscowSans-Medium" family="Moscow Sans" pointSize="15"/>
                    <color key="tintColor" systemColor="labelColor"/>
                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                    <state key="normal" title="Привязать карту">
                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    </state>
                    <userDefinedRuntimeAttributes>
                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                            <integer key="value" value="10"/>
                        </userDefinedRuntimeAttribute>
...
