...
                    <constraints>
                        <constraint firstAttribute="height" constant="44" id="Uvx-bF-a8P"/>
                    </constraints>
                    <fontDescription key="fontDescription" name="MoscowSans-Medium" family="Moscow Sans" pointSize="15"/>
                    <color key="tintColor" name="backButton"/>
                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                    <state key="normal" title="Попробовать еще раз"/>
                    <connections>
                        <action selector="onRetryTapped" destination="iN0-l3-epB" eventType="touchUpInside" id="qNK-Fn-vdh"/>
                    </connections>
                </button>
            </subviews>
            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
...
