...
        let makeMySubState = State(model: SectionState(header: nil, footer: nil), elements: [makeMySubElement])
        subStates.append(makeMySubState)
        var buttonTitle: String
        if let price = selectedSub?.price {
            buttonTitle = "Оплатить \(price)"
        } else if selectMakeMySub {
            buttonTitle = "Продолжить"
        } else {
            buttonTitle = ""
        }
        let viewState = M_ChooseSubView.ViewState(state: subStates, dataState: .loaded, payButtonEnable: selectedSub != nil || selectMakeMySub == true, payButtonTitle: buttonTitle, payCommand: nil)
        setState(state: viewState)
    }
...
