...
                                <rect key="frame" x="256" y="16" width="24" height="24"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="24" id="Z9q-4c-ySd"/>
                                    <constraint firstAttribute="height" constant="24" id="mPA-US-EPT"/>
                                </constraints>
                            </imageView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Собрать свой тариф" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nGj-aE-Gij">
                                <rect key="frame" x="16" y="16" width="195" height="24"/>
                                <fontDescription key="fontDescription" name="MoscowSans-Bold" family="Moscow Sans" pointSize="20"/>
                                <color key="textColor" name="primaryText"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Выберите столько поездок, сколько нужно именно Вам" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uir-Hc-AP2
...
